<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="iconCopy">&#xe801;</string>
    <string name="iconSwap">&#xe806;</string>
    <string name="iconRetry">&#xe804;</string>
    <string name="iconClear">&#xe800;</string>
    <string name="iconShare">&#xe803;</string>
    <string name="iconSpeak">&#xe807;</string>
    <string name="iconPaste">&#xe805;</string>
    <string name="iconPause">&#xe808;</string>
    <string name="iconListen">&#xe802;</string>

    <string name="appName">TinyTranslator</string>
    <string name="messageCopy">Translation has been copied to the clipboard</string>
    <string name="placeholder">Type here to translate</string>
    <string name="messageError">Request has failed</string>
    <string name="messageMuted">The device is in silent mode</string>
    <string name="messagePaste">Text has been pasted from the clipboard</string>
    <string name="messagePasteEmpty">Clipboard data is empty or invalid</string>
</resources>
