<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:clickable="true"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">
    <RelativeLayout
        android:elevation="4dp"
        android:background="@color/main"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbarHeight">
        <Spinner
            android:id="@+id/sourceLang"
            android:gravity="end"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/swapButton"
            android:layout_centerVertical="true"/>
        <Button
            android:id="@+id/swapButton"
            android:text="@string/iconSwap"
            android:textSize="@dimen/iconSize"
            android:textColor="@android:color/white"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="@dimen/toolbarHeight"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"/>
        <Spinner
            android:id="@+id/targetLang"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/swapButton"
            android:layout_centerVertical="true"/>
    </RelativeLayout>
    <LinearLayout
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            style="@style/TextBox"
            android:id="@+id/textarea"
            android:hint="@string/placeholder"
            android:maxLines="5"
            android:inputType="textMultiLine|textNoSuggestions"
            android:scrollbars="vertical"
            android:background="@drawable/textbox">
                <requestFocus/>
        </EditText>
        <LinearLayout
            android:gravity="end"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="48dp">
            <Button
                android:id="@+id/retryButton"
                android:text="@string/iconRetry"
                android:textSize="@dimen/iconSize"
                android:textColor="@color/main"
                android:visibility="gone"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="@dimen/iconWidth"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/sourceSpeakButton"
                android:text="@string/iconSpeak"
                android:textSize="@dimen/iconSize"
                android:textColor="@color/main"
                android:visibility="gone"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="@dimen/iconWidth"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/clearButton"
                android:text="@string/iconClear"
                android:textSize="@dimen/iconSize"
                android:textColor="@color/main"
                android:visibility="gone"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="@dimen/iconWidth"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/pasteButton"
                android:text="@string/iconPaste"
                android:textSize="@dimen/iconSize"
                android:textColor="@color/main"
                android:visibility="gone"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="@dimen/iconWidth"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/recognizeButton"
                android:text="@string/iconListen"
                android:textSize="@dimen/iconSize"
                android:textColor="@color/main"
                android:visibility="gone"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="@dimen/iconWidth"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <ScrollView
            android:id="@+id/translationWrapper"
            android:fillViewport="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="64dp">
            <LinearLayout
                android:clickable="true"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true">
                <TextView
                    style="@style/TextBox"
                    android:id="@+id/translation"
                    android:visibility="gone"
                    android:textIsSelectable="true"/>
                <TextView
                    style="@style/TextBox"
                    android:id="@+id/dictionary"
                    android:textColor="@color/gray"
                    android:visibility="gone"
                    android:textIsSelectable="true"/>
            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:gravity="end"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_below="@+id/translationWrapper"
            android:layout_height="48dp"
            android:layout_marginTop="-64dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <Button
                android:id="@+id/copyButton"
                android:text="@string/iconCopy"
                android:textSize="@dimen/iconSize"
                android:textColor="@color/main"
                android:visibility="gone"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="@dimen/iconWidth"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/targetSpeakButton"
                android:text="@string/iconSpeak"
                android:textSize="@dimen/iconSize"
                android:textColor="@color/main"
                android:visibility="gone"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="@dimen/iconWidth"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/shareButton"
                android:text="@string/iconShare"
                android:textSize="@dimen/iconSize"
                android:textColor="@color/main"
                android:visibility="gone"
                android:background="?android:attr/selectableItemBackground"
                android:layout_width="@dimen/iconWidth"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/progressLayout"
            android:clickable="true"
            android:visibility="gone"
            android:background="@color/progressBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:layout_alignParentTop="true">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>